--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.353",
+    "@iconify/tailwind4": "^1.0.6",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
