--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "donationfund",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "flyonui": "^2.2.0",
@@ -22,23 +21,17 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@iconify-json/f7": "^1.2.2",
     "@iconify/json": "^2.2.353",
     "@iconify/tailwind4": "^1.0.6",
-    "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.1",
-    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.29.0",
     "eslint-plugin-vue": "~10.2.0",
-    "jiti": "^2.4.2",
-    "npm-run-all2": "^8.0.4",
+    "globals": "^16.2.0",
     "prettier": "3.5.3",
-    "typescript": "~5.8.0",
     "vite": "^7.0.0",
-    "vite-plugin-vue-devtools": "^7.7.7",
-    "vue-tsc": "^2.2.10"
-  },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+    "vite-plugin-vue-devtools": "^7.7.7"
+  }
 }
