--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "libphonenumber-js": "^1.12.9",
     "lucide-vue-next": "^0.525.0",
+    "pinia": "^3.0.3",
     "reka-ui": "^2.3.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
@@ -38,7 +39,9 @@
     "typescript": "^5.7.2",
     "unplugin-vue-components": "^28.8.0",
     "vite": "^6.0.3",
+    "vite-plugin-vue-devtools": "^7.7.7",
     "vue-the-mask": "^0.11.1",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
