--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify-json/radix-icons": "^1.2.2",
     "@iconify/tailwind4": "^1.0.6",
     "@types/node": "^24.0.12",
+    "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.10.0",
     "typescript": "^5.7.2",
