--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,5 +10,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["vite.config.ts", "src/**/*.ts"]
+  "include": ["vite.config.ts", "src/resolvers/*.ts"]
 }
